backend: use ratelimit for etf2l api, separate logic into cli commands
