# backend/internal/gen/api/oas_validators_gen.go
@@ -79,15 +79,8 @@ func (s *GetTeamOK) Validate() error {
 
 	var failures []validate.FieldError
 	if err := func() error {
-		if value, ok := s.Team.Get(); ok {
-			if err := func() error {
-				if err := value.Validate(); err != nil {
-					return err
-				}
-				return nil
-			}(); err != nil {
-				return err
-			}
+		if err := s.Team.Validate(); err != nil {
+			return err
 		}
 		return nil
 	}(); err != nil {
@@ -190,13 +183,30 @@ func (s *Team) Validate() error {
 
 	var failures []validate.FieldError
 	if err := func() error {
-		if err := s.Recruitment.Validate(); err != nil {
-			return err
+		if s.Recruitments == nil {
+			return errors.New("nil is invalid value")
+		}
+		var failures []validate.FieldError
+		for i, elem := range s.Recruitments {
+			if err := func() error {
+				if err := elem.Validate(); err != nil {
+					return err
+				}
+				return nil
+			}(); err != nil {
+				failures = append(failures, validate.FieldError{
+					Name:  fmt.Sprintf("[%d]", i),
+					Error: err,
+				})
+			}
+		}
+		if len(failures) > 0 {
+			return &validate.Error{Fields: failures}
 		}
 		return nil
 	}(); err != nil {
 		failures = append(failures, validate.FieldError{
-			Name:  "recruitment",
+			Name:  "recruitments",
 			Error: err,
 		})
 	}
